--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     <div class="start">
         <div class="card">
             <div class="card-body gs-card">
-                <div class="title">Ready to try Bot?</div>
-                <div class="subtitle">Invite Bot and start giving your server cool perks!</div>
+                <div class="title">Ready to try ChinaCity?</div>
+                <div class="subtitle">Invite ChinaCity and start giving your server cool perks!</div>
                 <br />
                 <a class="btn btn-primary btn-lg" href="#start_link" role="button">Invite Now!</a>
             </div><br />
