--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <div class="cards">
         <div class="card" style="width: 18rem;">
         <div class="card-body">
-            <h5 class="card-title">Moderation</h5>
-            <p class="card-text">With this bot you can setup diffrent Auto-Moderation systems, Banned words is a example. This bot will make your mods greatful that you even added us!</p>
+            <h5 class="card-title">Movies</h5>
+            <p class="card-text">We have awesome future that let you watch movies from the bot, 100% FREE no money just type -movies!!!!. We try to upadte the movie selection as much as possible!</p>
         </div>
     </div>
         <div class="card" style="width: 18rem;">
